--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,7 +6,7 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# pane resize
+# Atur Pane
 bind -r Left  resize-pane -L 5
 bind -r Down  resize-pane -D 5
 bind -r Up    resize-pane -U 5
@@ -17,16 +17,22 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-# reload config
+# Muat ulang config
 bind r source-file ~/.config/tmux/tmux.conf \; display "Termuat ulang!"
 
-# --------------------#
-#      Options        #
-# --------------------#
+
+#     ___        _   _                 
+#   / _ \ _ __ | |_(_) ___  _ __  ___ 
+#  \ | | | '_ \| __| |/ _ \| '_ \/ __|
+#  \ |_| | |_) | |_| | (_) | | | \__ \
+#  \___/| .__/ \__|_|\___/|_| |_|___/
+#      |_|                          
+
+# Lakukan command: 
+# echo $TERM di Terminal (Luar Tmux) dan juga di Tmux kalian untuk mengetahui opsi yang cocok.
 
 # set -g default-terminal "tmux-256color"
 # set-option -ga terminal-overrides ",xterm-256color:Tc"
-
 
 
 # set-option -g default-terminal "xterm-256color"
@@ -43,12 +49,12 @@ set -ga terminal-overrides ",*256col*:Tc"
 set -ga terminal-overrides ",alacritty:RGB"
 set -ga terminal-overrides ",xterm-256color:RGB"
 set -ga terminal-overrides ",*:RGB"
-set -g escape-time 10  # Helps with key delays in Vim
+set -g escape-time 10  # Bagi yang bermasalah dengan warna VIM
 
 # set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 
-# Window title begins by 1 and not 0
+# Index Windows mulai dari 1, bukan 0.
 set -g base-index 1
 set -g pane-base-index 1
 
@@ -59,22 +65,36 @@ set -g status 2
 
 set-option -g status-position top
 
-# List of plugins
+
+
+#  ____  _             _           
+# |  _ \| |_   _  __ _(_)_ __  ___ 
+# | |_) | | | | |/ _` | | '_ \/ __|
+# |  __/| | |_| | (_| | | | | \__ \
+# |_|   |_|\__,_|\__, |_|_| |_|___/
+#                |___/             
+
+
+# List Plugin
+
+# Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
 
-# Session resurrection
+# Plugin untuk Resurrect Session
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
-# Auto saves every 15 minutes
+ 
+   # Otomatis save setiap 15 menit
 set -g @continuum-restore 'on'
 set -g @resurrect-capture-pane-contents 'on'
 
-# --------------------#
-#    V1337Q's Theme   #
-# --------------------#
+#  _____ _                         
+# |_   _| |__   ___ _ __ ___   ___ 
+#   | | | '_ \ / _ \ '_ ` _ \ / _ \
+#   | | | | | |  __/ | | | ||  __/
+#   |_| |_| |_|\___|_| |_||_|\___|`
 
-# The messages
+# Notifikasi
 set -g message-style fg=black,bg=magenta,bold
 
 # pane borders
@@ -88,7 +108,7 @@ set-option -g status-bg 'default'
 # selection
 set-option -g mode-style fg='black',bg='blue'
 
-# clock
+# clock (plugin)
 set-window-option -g clock-mode-colour 'magenta'
 
 # default statusbar colors
@@ -110,7 +130,7 @@ set -g status-left ''
 set-option -g status-right-style none
 set -g status-right-length 120
 
-# Original Theme
+# Round separator/edges Theme
 
 # set -g status-right '#[fg=magenta]#[fg=default,bg=magenta] #[fg=white,bg=black] #W #[fg=magenta]#[fg=default,bg=magenta] #[fg=white,bg=black] #{p:pane_current_path} #[fg=green]#[fg=default,bg=green] #[fg=white,bg=black] #S '
 
@@ -118,7 +138,7 @@ set -g status-right-length 120
 
 set -g status-right '#[fg=magenta]█#[fg=default,bg=magenta] #[fg=white,bg=black] #W #[fg=magenta]█#[fg=default,bg=magenta] #[fg=white,bg=black] #{p:pane_current_path} #[fg=green]█#[fg=default,bg=green] #[fg=white,bg=black] #S '
 
-# Original Theme
+# Round separator/edges Theme
 
 # set -g window-status-separator "#[bg=default] "
 # set -g window-status-current-format "#[fg=white,bg=black] #W #[fg=black,bg=blue] #I#[fg=blue,bg=default]"
@@ -130,28 +150,9 @@ set -g window-status-current-format "#[fg=white,bg=black] #W #[fg=black,bg=blue]
 set -g window-status-format "#[fg=white,bg=black] #W #[fg=black,bg=yellow] #I#[fg=yellow,bg=default]█"
 
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# TMUX Plugin Manager (TPM). Pastikan disimpan di bagian Paling bawah config.
 run '~/.config/tmux/plugins/tpm/tpm'
 
-# set -g default-terminal "tmux-256color"
-
-# # Tell tmux to use 256-color internally
-
-# set -g default-terminal "screen-256color"
-
-# # Allow tmux to send 256-color to its "parent terminal", allowing
-
-# # the terminal to render colors in full.
-
-# set-option -ga terminal-overrides ",*-256color*:TC"
-
-# set -g default-terminal "screen-256color"
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-# set -g default-terminal "tmux-256color"
-
-# set -g default-terminal "tmux-256color"
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 
 
