--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -46,6 +46,10 @@ set -g status-justify centre
 
 set -g status-position bottom
 
+
+# P L U G I N 
+
+
 # # === Blue and White theme ===
 # # set -g window-status-format "#I:#W "
 
@@ -149,12 +153,12 @@ set -g status-position bottom
 # bind-key C-t display-popup -d "#{pane_current_path}" -w 80% -h 80% -E "zsh" # quick floating terminal
 # bind-key C-g display-popup -d "#{pane-current-path}" -w 90% -h 90% -E "lazygit" # lazygit float
 # bind-key C-m display-popup -w 95% -h 95% -E "rmpc" # music float
-# bind o display-menu -T "#[align=centre]Config" -x C -y C \
-#     ".zshrc"            z  "display-popup -w 75% -h 75% -E 'vim ~/.zshrc'" \
-#     ".eww"         p  "display-popup -w 75% -h 75% -E 'vim ~/.config/eww'" \
-#     ".tmux.conf"        t  "display-popup -w 75% -h 75% -E 'vim ~/.config/tmux/tmux.conf'" \
-#     ".vimrc"             v  "display-popup -w 75% -h 75% -E 'vim ~/.vimrc'" \
-#     "quit"              q  ""
+bind o display-menu -T "#[align=centre]Config" -x C -y C \
+    ".zshrc"            z  "display-popup -w 75% -h 75% -E 'vim ~/.zshrc'" \
+    ".eww"         p  "display-popup -w 75% -h 75% -E 'vim ~/.config/eww'" \
+    ".tmux.conf"        t  "display-popup -w 75% -h 75% -E 'vim ~/.config/tmux/tmux.conf'" \
+    ".vimrc"             v  "display-popup -w 75% -h 75% -E 'vim ~/.vimrc'" \
+    "quit"              q  ""
 
 # # Drag copy using mouse
 # unbind -T copy-mode-vi MouseDragEnd1Pane
@@ -209,3 +213,18 @@ set -g status-position bottom
 # set -g window-status-current-style "bg=#{@thm_blue},fg=#{@thm_bg},bold"
 
 # run '~/.config/tmux/.tmux/plugins/tpm/tpm' # always keep this line last
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+run-shell ~/Documents/tmuxplugins/tmux-resurrect/resurrect.tmux
